--- a/src/pug/pages/blog.pug
+++ b/src/pug/pages/blog.pug
@@ -27,7 +27,7 @@ block content
 				li
 					a(href="#!") Полезные статьи
 		section.blog
-			h1.h1 Полезные статьи
+			h1 Полезные статьи
 			.blog-articles
 				+blog-card(1, 'Ищете подходящий товар для продаж на wildberries?','Мы уверены что шейкеры вам подойдут')
 				
