--- a/src/pug/pages/contacts.pug
+++ b/src/pug/pages/contacts.pug
@@ -2,7 +2,7 @@ extends ../layouts/layout.pug
 
 block content
 	include ../sections/_header.pug
-	main.inner-page
+	main.inner-page.inner-page--contacts
 		//======= breadcrumbs =======
 		.breadcrumbs
 			ul
@@ -12,7 +12,7 @@ block content
 					a(href="#!") Контакты
 		
 		section.contacts-main
-			h1.h1 Контакты
+			h1 Контакты
 			.container
 				.contacts-grid
 					//======== ROW =========
