--- a/src/pug/pages/product-page.pug
+++ b/src/pug/pages/product-page.pug
@@ -19,7 +19,7 @@ block content
 					use( href='./img/spriteSvg.svg#svg-plus')
 				
 			//======== header =======
-			h1.h1 Шейкер С01
+			h1 Шейкер С01
 			
 			//======= header banner ======
 			.product-page-header.white-bg
@@ -61,6 +61,6 @@ block content
 			button.btn-close +
 			.video
 				iframe(width="100%", height="100%", src="https://www.youtube.com/embed/9YpM5vwYMyU?si=iCuuVvf5FQhhRJll", title="YouTube video player", frameborder="0", allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share", referrerpolicy="strict-origin-when-cross-origin", allowfullscreen)
-				
+
 block variables
 	-var title = "Shaker";
