--- a/src/pug/pages/single-blog.pug
+++ b/src/pug/pages/single-blog.pug
@@ -28,7 +28,7 @@ block content
 					a(href="#!") Шейкер + маркетплейс
 		
 		section.single-article
-			h1.h1 Шейкер + маркетплейс = 💜
+			h1 Шейкер + маркетплейс = 💜
 			.inner-page-banner
 				picture
 					source(srcset="./img/article-page/article-bg-mob.webp", media="(max-width: 767px)")
