--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -8,6 +8,7 @@
  --darkBg: rgba(0, 0, 0, 1);
  --accentYellow: #fdebc5;
  --accentBlue:#5769d6;
+ --hoverColor: rgb(40, 153, 248);
  --font: 'Montserrat';
  --fontMedium: 'Montserrat-Medium';
  --fontSemi: 'Montserrat-SemiBold';
@@ -319,54 +320,5 @@ h1, h2{
 @keyframes slowOpacity {
   to {
     opacity: 1;
-  }
-}
-.bottom-navigation{
-  .swiper-pagination {
-    bottom: 12px;
-    width: fit-content;
-    position: absolute;
-
-    left: 50%;
-    transform: translate(-50%);
-    font-weight: 700;
-    font-variant-numeric: tabular-nums;
-  }
-
-  .swiper-button-prev,
-  .swiper-button-next {
-    top: calc(100% - 20px);
-    flex-shrink: 0;
-
-  }
-
-  .swiper-button-prev {
-    left: 43%
-  }
-
-  .swiper-button-next {
-    right: 43%
-  }
-
-  @media (max-width: 1199px) {
-    .swiper-button-prev {
-      left: 38%;
-    }
-
-    .swiper-button-next {
-      right: 38%;
-    }
-  }
-
-  @media (max-width: 767px) {
-  
-
-    .swiper-button-prev {
-      left: 20%;
-    }
-
-    .swiper-button-next {
-      right: 20%;
-    }
   }
 }
