--- a/src/scss/blocks/_swiper-slider.scss
+++ b/src/scss/blocks/_swiper-slider.scss
@@ -65,3 +65,52 @@
 		height: 15px;
 	}
 }
+.bottom-navigation {
+	.swiper-pagination {
+		bottom: 12px;
+		width: fit-content;
+		position: absolute;
+
+		left: 50%;
+		transform: translate(-50%);
+		font-weight: 700;
+		font-variant-numeric: tabular-nums;
+	}
+
+	.swiper-button-prev,
+	.swiper-button-next {
+		top: calc(100% - 20px);
+		flex-shrink: 0;
+
+	}
+
+	.swiper-button-prev {
+		left: 42.5%
+	}
+
+	.swiper-button-next {
+		right: 42.5%
+	}
+
+	@media (max-width: 1199px) {
+		.swiper-button-prev {
+			left: 38%;
+		}
+
+		.swiper-button-next {
+			right: 38%;
+		}
+	}
+
+	@media (max-width: 767px) {
+
+
+		.swiper-button-prev {
+			left: 20%;
+		}
+
+		.swiper-button-next {
+			right: 20%;
+		}
+	}
+}
