--- a/src/scss/pages/_single-blog.scss
+++ b/src/scss/pages/_single-blog.scss
@@ -1,4 +1,7 @@
 .inner-page.inner-page--article{
+	padding-top: 40px;
+	@media(min-width:1200px){.breadcrumbs + *{padding-top: 24px;}}
+	
 	@media (max-width: 767px) {
 	padding-top: 10px;
 	padding-bottom: 26px;
