--- a/src/scss/sections/_video-preview.scss
+++ b/src/scss/sections/_video-preview.scss
@@ -1,5 +1,9 @@
 .video-preview{
-	margin-top: 30px;
+	margin-top: 26px;
+	&-item{
+		border-radius: 10px;
+		
+	}
 	@media (max-width: 767px) {
 	margin-top: 60px;
 	}
@@ -36,7 +40,5 @@
 			height: 100%;
 		}
 	}
-	@media (max-width: 767px) {
-	    // height: 165px;
-	}
+	
 }
