--- a/src/pug/layouts/layout.pug
+++ b/src/pug/layouts/layout.pug
@@ -97,5 +97,6 @@ html(lang="ru")
 		//=============== lazy load ===================
 		script(src="./libs/jquery.lazy.min.js")
 		//=============== мои скрипты ===================	
+		script(src="./js/js-json/cards.js" type="module")
 		script(src="./js/main.js")
 		
