--- a/src/pug/sections/_portfolio.pug
+++ b/src/pug/sections/_portfolio.pug
@@ -10,10 +10,10 @@ mixin galleryFoto(arg)
 section.portfolio.white-bg.mt-50
 	.portfolio__header.d-flex-y
 		h2.title-25 Наши работы
-		button.icon-table#show-all
+		button.icon-table#showNext
 			svg
 				use( href='./img/spriteSvg.svg#svg-table')
 	
 	//======= PORTFOLIO WRAPPER =========
-	.portfolio-wrapper#portfolio
-		+galleryFoto(9)
+	.portfolio-wrapper#portfolio-cards
+		//- +galleryFoto(9)
