--- a/src/pug/sections/_header.pug
+++ b/src/pug/sections/_header.pug
@@ -11,13 +11,16 @@ header.header#top
 			
 			//====== header-models =========
 			.header-models
-				ul
-					li
-						a(href="#!").d-flex-y
-							span Наши <br> модели
-							svg.caret-down
-								use(href="./img/spriteSvg.svg#caret-down")
-			
+				a(href="#!").d-flex-y
+					span Наши <br> модели
+					svg.caret-down
+						use(href="./img/spriteSvg.svg#caret-down")
+				.drop-list
+					.drop-list__menu
+						a(href="#!") C01 — 600 мл
+						a(href="#!") C02 — 400 мл
+						a(href="#!") C03 — 600 мл
+						a(href="#!") C04 — 400 мл
 			//====== header-nav =========
 			.header-nav-desktop
 				ul
