edit-font-family

--- a/src/pug/sections/_header.pug
+++ b/src/pug/sections/_header.pug
@@ -17,10 +17,10 @@ header.header#top
 						use(href="./img/spriteSvg.svg#caret-down")
 				.drop-list
 					.drop-list__menu
-						a(href="#!") C01 — 600 мл
-						a(href="#!") C02 — 400 мл
-						a(href="#!") C03 — 600 мл
-						a(href="#!") C04 — 400 мл
+						a(href="product-page.html") C01 — 600 мл
+						a(href="product-page.html") C02 — 400 мл
+						a(href="product-page.html") C03 — 600 мл
+						a(href="product-page.html") C04 — 400 мл
 			//====== header-nav =========
 			.header-nav-desktop
 				ul
