--- a/src/scss/blocks/_pagination.scss
+++ b/src/scss/blocks/_pagination.scss
@@ -5,7 +5,7 @@
    width: fit-content;
    margin: 0 auto;
    column-gap: 25px;
-   font-family: var(--fontBold);
+   font-family: var(--font);
    font-weight: 700;
    margin-top: 44px;
    @media (max-width: 767px) {
