--- a/src/scss/sections/_acordion.scss
+++ b/src/scss/sections/_acordion.scss
@@ -30,7 +30,7 @@
 		display: block;
 		padding-block: 7px 16px;
 		padding-right: 25px;
-		font-family: var(--fontBold);
+		font-family: var(--font);
 		width: 100%;
 		z-index: 5;
 		transition: color .3s;
