--- a/src/pug/layouts/layout.pug
+++ b/src/pug/layouts/layout.pug
@@ -27,21 +27,21 @@ html(lang="ru")
 				font-display: swap;
 			}
 			@font-face{
-				font-family: 'Montserrat-Medium';
+				font-family: 'Montserrat';
 				src: url(./fonts/Montserrat-Medium.woff2) format("woff2");
 				font-weight: 500;
 				font-style: normal;
 				font-display: swap;
 			}
 			@font-face{
-				font-family: 'Montserrat-SemiBold';
+				font-family: 'Montserrat';
 				src: url(./fonts/Montserrat-SemiBold.woff2) format("woff2");
 				font-weight: 600;
 				font-style: normal;
 				font-display: swap;
 			}
 			@font-face{
-				font-family: 'Montserrat-Bold';
+				font-family: 'Montserrat';
 				src: url(./fonts/Montserrat-Bold.woff2) format("woff2");
 				font-weight: bold;
 				font-style: normal;
