--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -10,9 +10,7 @@
  --accentBlue:#5769d6;
  --hoverColor: rgb(40, 153, 248);
  --font: 'Montserrat';
- --fontMedium: 'Montserrat-Medium';
- --fontSemi: 'Montserrat-SemiBold';
- --fontBold: 'Montserrat-Bold';
+
 }
 * {
 	  box-sizing: border-box;
@@ -34,7 +32,7 @@
 	padding: 0;
 	width: 100%;
   background-color: #e2e2e2;
-  font-family: var(--fontMedium);
+  font-family: var(--font);
   font-weight: 500;
   color: var(--text);
   font-size: 15px;
@@ -174,7 +172,7 @@ select:-webkit-autofill:focus {
 /*========== TYPOGRAPHY ==========*/
 h1, h2{
   font-size: 40px;
-  font-family: var(--fontSemi);
+  font-family: var(--font);
   font-weight: 600;
   @media (max-width: 1023px) {
     font-size: 34px;
@@ -186,7 +184,7 @@ h1, h2{
 .title-25{
   font-size: 25px;
   line-height: 1.2;
-  font-family: var(--fontSemi);
+  font-family: var(--font);
   font-weight: 600;
   @media (max-width: 1023px) {
     font-size: 20px;
@@ -197,7 +195,7 @@ h1, h2{
 }
 .title-20{
   font-size: 20px;
-  font-family: var(--fontMedium);
+  font-family: var(--font);
   font-weight: 500;
   @media (max-width: 1023px) {
       font-size: 18px;
@@ -209,11 +207,11 @@ h1, h2{
 }
 .title-15{
   font-size: 15px;
-  font-family: var(--fontMedium);
+  font-family: var(--font);
     font-weight: 500;
 }
 .txt-bold{
-  font-family: var(--fontBold);
+  font-family: var(--font);
 }
 .txt-center{text-align: center;}
 .contact-link {
