--- a/src/scss/base/_forms.scss
+++ b/src/scss/base/_forms.scss
@@ -22,7 +22,7 @@
 		height: 32px;
 		font-size: 15px;
 		color: #000000;
-		font-family: var(--fontMedium);
+		font-family: var(--font);
 		font-weight: 500;
 		&.error{
 			border-bottom: 1px solid red;
@@ -57,7 +57,7 @@
  }
  .inputfile+label {
  	font-size: 15px;
-	font-family: var(--fontMedium);
+	font-family: var(--font);
 	font-weight: 500;
  }
 .form-item.form-item--custom{
@@ -99,7 +99,7 @@
  }
  .form-notice{
 	gap: 12px;
-	font-family: var(--fontMedium);
+	font-family: var(--font);
 	align-items: center;
 	font-weight: 500;
 	margin-bottom: 47px;
