--- a/src/scss/base/_icons.scss
+++ b/src/scss/base/_icons.scss
@@ -35,7 +35,7 @@
 	line-height: 22px;
 	text-align: center;
 	font-size: 16px;
-	font-family: var(--fontMedium);
+	font-family: var(--font);
 	font-weight: 500;
 	cursor:pointer;
 	&:hover{
