--- a/src/scss/pages/_single-blog.scss
+++ b/src/scss/pages/_single-blog.scss
@@ -42,7 +42,7 @@
 	padding-block: 45px;
 	h2{
 		font-size: 25px;
-		font-family: var(--fontBold);
+		font-family: var(--font);
 		
 	}
 	&>*:not(:last-child) {
