--- a/src/scss/sections/_blog-cards.scss
+++ b/src/scss/sections/_blog-cards.scss
@@ -18,7 +18,7 @@
 	}
 }
 .blog-card{
-	font-family: var(--fontMedium);
+	font-family: var(--font);
 	min-width: 280px;
 	font-weight: 500;
 	overflow: hidden;
