--- a/src/scss/sections/_header-banner.scss
+++ b/src/scss/sections/_header-banner.scss
@@ -36,7 +36,7 @@
 	border-radius: 10px;
 	h2{
 		font-size: 15px;
-		font-family: var(--fontBold);
+		font-family: var(--font);
 		margin-right: 55px;
 		padding-top: 8px;
 		flex-shrink: 0;
@@ -77,7 +77,7 @@
 		border: 1px solid #000000;
 		width: 100%;
 		max-width: 500px;
-		font-family: var(--fontMedium);
+		font-family: var(--font);
 		font-weight: 500;
 		
 	}
