--- a/src/scss/sections/_review.scss
+++ b/src/scss/sections/_review.scss
@@ -11,7 +11,7 @@
 	padding: 30px 50px 50px;
 	display: flex;
 	column-gap:45px;
-	font-family: var(--fontMedium);
+	font-family: var(--font);
 	font-weight: 500;
 	font-weight: 500;
 	@media (max-width: 1364px) {
