--- a/src/scss/sections/_steps.scss
+++ b/src/scss/sections/_steps.scss
@@ -54,7 +54,7 @@
 // }
 .current-model-name {
 	display: none;
-	font-family: var(--fontMedium);
+	font-family: var(--font);
 	font-weight: 500;
 
 	@media (max-width: 767px) {
