--- a/src/pug/sections/_constructor-inner-page.pug
+++ b/src/pug/sections/_constructor-inner-page.pug
@@ -41,7 +41,7 @@ section.constructor.constructor-minimize.white-bg.mt-10
 			
 			//=======LEFT COLUMN ======
 			.constructor-column-left
-				h3.title-20.mb-20 Собрать свой шейкер
+				p.title-20.mb-20 Собрать свой шейкер
 				//=======  MODELS CARDS =======
 				.models-cards.models-cards--wrap
 					+model-card-mini(6, 1, 92, 'chkd')
