--- a/src/pug/sections/_footer.pug
+++ b/src/pug/sections/_footer.pug
@@ -9,7 +9,7 @@ footer.footer
 			
 			//====footer menu wrapper =======
 			.footer-menu-wrapper
-				h3.title-15.mb-40 Прдукция:
+				p.title-15.mb-40 Продукция:
 				//======= nav columns ======
 				.footer-menu
 					
