--- a/src/pug/sections/_print.pug
+++ b/src/pug/sections/_print.pug
@@ -6,6 +6,6 @@ section.print.mt-10.d-flex
 			img.lazy(src="./img/product-page/print-bg.webp" alt="img" width="1200")
 		
 	.print__text.accent-bg
-		h3.title-25 Печать
+		p.title-25 Печать
 		p Мы используем УФ печать, краска запекается в специальной сушке под УФ лампами. Такой логотип не сотрется от небольших механических повреждения, шейкер можно безбоязненно мыть в посудомоечной машине. 
 		a(href="#contacts").btn.btn--outline Подробнее
