--- a/src/pug/sections/_review.pug
+++ b/src/pug/sections/_review.pug
@@ -12,7 +12,7 @@ section.review
 						img(src="./img/review/1.webp", width="150" alt="img")
 					
 					.review-card__text
-						h4.txt-bold Анастасия Крамаренко
+						p #[strong Анастасия Крамаренко]
 						p ТЭО г. Новосибирск
 						.review-card__desk
 							p Заказывали изготовление Шейкеров с нанесением логотипа компании, в подарок ученикам на Новый год. Оперативно подготовили макеты будущего изделия, и оганизовали доставку в установленный срок в город Иркутск . Дети и взрослые были рады таким красивым и качественным подаркам.
@@ -24,7 +24,7 @@ section.review
 						img(src="./img/review/2.webp", width="150" alt="img")
 					
 					.review-card__text
-						h4.txt-bold Рустем Абдрахимов
+						p #[strong Рустем Абдрахимов]
 						p X-fitness г. Стерлитамак
 						.review-card__desk
 							p Уже несколько лет сотрудничаем с Shaker Bottle, крутые шейкеры, отличного качества, можно подобрать любые вариации цвета. Клиенты оценили. Отлично продаются. Будем заказывать и дальше.
@@ -36,7 +36,7 @@ section.review
 						img(src="./img/review/1.webp", width="150" alt="img")
 					
 					.review-card__text
-						h4.txt-bold Анастасия Крамаренко
+						p #[strong Анастасия Крамаренко]
 						p ТЭО г. Новосибирск
 						.review-card__desk
 							p Заказывали изготовление Шейкеров с нанесением логотипа компании, в подарок ученикам на Новый год. Оперативно подготовили макеты будущего изделия, и оганизовали доставку в установленный срок в город Иркутск . Дети и взрослые были рады таким красивым и качественным подаркам.
@@ -48,7 +48,7 @@ section.review
 						img(src="./img/review/2.webp", width="150" alt="img")
 					
 					.review-card__text
-						h4.txt-bold Рустем Абдрахимов
+						p #[strong Рустем Абдрахимов]
 						p X-fitness г. Стерлитамак
 						
 						.review-card__desk
