--- a/src/pug/sections/_steps.pug
+++ b/src/pug/sections/_steps.pug
@@ -27,8 +27,8 @@ section.constructor.white-bg.mt-30
 	.container
 		.constructor-block
 			.constructor-header.d-flex-y
-				h3.title-25.active(data-step-title) Шаг 1
-				h3.title-25(data-step-title) Шаг 2
+				p.title-25.active(data-step-title) Шаг 1
+				p.title-25(data-step-title) Шаг 2
 				
 			//======= STEPS CONTENT =====
 			.constructor-body
