--- a/src/pug/pages/contacts.pug
+++ b/src/pug/pages/contacts.pug
@@ -42,7 +42,7 @@ block content
 					//============= ROW ====================
 					.contacts-row.contacts-row--info
 						.contacts-block.how-working
-							h3.title-25 Как мы работаем?
+							h2 Как мы работаем?
 							.acordion
 								//=========== single block =============
 								.acor-item
