--- a/src/pug/sections/_portfolio.pug
+++ b/src/pug/sections/_portfolio.pug
@@ -9,7 +9,7 @@ mixin galleryFoto(arg)
 //========= PORTFOLIO ============
 section.portfolio.white-bg.mt-50
 	.portfolio__header.d-flex-y
-		h2.title-25 Наши работы
+		h2 Наши работы
 		button.icon-table#showNext
 			svg
 				use( href='./img/spriteSvg.svg#svg-table')
