--- a/src/pug/sections/_header-banner-inner.pug
+++ b/src/pug/sections/_header-banner-inner.pug
@@ -5,7 +5,7 @@
 		h1 Шейкер + маркетплейс = 💜
 	
 	//======== SHAKER MODELS ========
-	.shaker-models-wrapper
+	.shaker-models-wrapper#our-models
 		.container
 			.shaker-models.d-flex
 				h2 Наши модели
