--- a/src/pug/sections/_header.pug
+++ b/src/pug/sections/_header.pug
@@ -11,7 +11,7 @@ header.header#top
 			
 			//====== header-models =========
 			.header-models
-				a(href="#!").d-flex-y
+				a(href="#our-models").d-flex-y
 					span Наши <br> модели
 					svg.caret-down
 						use(href="./img/spriteSvg.svg#caret-down")
