--- a/src/scss/sections/_consructor-inner.scss
+++ b/src/scss/sections/_consructor-inner.scss
@@ -144,7 +144,11 @@
 			background-color: var(--darkBg);
 			color: white;
 		}
-		&:hover .btn-slim{background-color: var(--hoverColor);color: white;}
+		&:hover .btn-slim{
+			background-color: var(--hoverColor);
+			border-color: var(--hoverColor);
+			color: white;
+		}
 	}
 
 	@media (max-width: 767px) {
