--- a/src/pug/sections/_product-parts-sliders.pug
+++ b/src/pug/sections/_product-parts-sliders.pug
@@ -25,7 +25,7 @@ section.product-parts.white-bg.mt-10
 		
 			//======= description =========
 			.product-parts__description
-				h2.title-25 Стакан
+				.title-25 Стакан
 				p Объем 600 мл по мерной шкале (фактически 700 мл) Классическая форма с двумя боковыми волнистыми гранями.
 		
 		//======= SINGLE CARD =======
@@ -51,7 +51,7 @@ section.product-parts.white-bg.mt-10
 			
 			//======= description =========
 			.product-parts__description
-				h2.title-25 Клапан
+				.title-25 Клапан
 				p Надежный крепкий клапан. Жестко фиксируется в открытом положении и не ударит по носу. Имеет гигиеническую “юбочку”, которая не даст грязным пальцам прикасаться к горлышку шейкера.  
 		
 		//======= SINGLE CARD =======
@@ -76,7 +76,7 @@ section.product-parts.white-bg.mt-10
 				.swiper-pagination
 			//======= description =========
 			.product-parts__description
-				h2.title-25 Мерная шкала
+				.title-25 Мерная шкала
 				p Прозрачная черная шкала, при любом цвете стакана будет видно уровень жидкости. Шкала мл и oz.
 		
 		//======= SINGLE CARD =======
@@ -101,5 +101,5 @@ section.product-parts.white-bg.mt-10
 				.swiper-pagination
 			//======= description =========
 			.product-parts__description
-				h2.title-25 Комплектация
+				.title-25 Комплектация
 				p Сетка для смешивания всегда в комплекте. Металический шарик — пружина и пластиковый венчик (дополнительно).
