--- a/src/scss/blocks/_swiper-slider.scss
+++ b/src/scss/blocks/_swiper-slider.scss
@@ -73,7 +73,7 @@
 
 		left: 50%;
 		transform: translate(-50%);
-		font-weight: 700;
+		font-weight: bold;
 		font-variant-numeric: tabular-nums;
 	}
 
