--- a/src/scss/sections/_product-parts-sliders.scss
+++ b/src/scss/sections/_product-parts-sliders.scss
@@ -62,5 +62,5 @@
 }
 .product-parts__description{
 	padding: 3px 10px;
-	.title-25{margin-bottom: 8px; font-family: var(--font);}
+	.title-25{margin-bottom: 8px; font-weight: 600;}
 }
