--- a/src/pug/layouts/layout.pug
+++ b/src/pug/layouts/layout.pug
@@ -55,34 +55,20 @@ html(lang="ru")
 		.social-block-fixed
 			.social-block
 				a(href="#!").icon-email
-					img(src="./img/social/email.webp", alt="email")
+					img(src="./img/social/email.png", width="40" height="40" alt="email")
 				a(href="#!").icon-vk
-					img(src="./img/social/vk.webp", alt="vk")
+					img(src="./img/social/vk.png", width="40" height="40" alt="vk")
 				a(href="#!").icon-inst
-					img(src="./img/social/ins.webp", alt="inst")
+					img(src="./img/social/ins.png", width="40" height="40" alt="inst")
 				a(href="#!").icon-tel
-					img(src="./img/social/app.webp", alt="app")
+					img(src="./img/social/app.png", width="40" height="40" alt="app")
 				a(href="#!").icon-viber
-					img(src="./img/social/viber.webp", alt="viber")
+					img(src="./img/social/viber.png", width="40" height="40" alt="viber")
 				a(href="#!").icon-tg
-					img(src="./img/social/tg.webp", alt="tg")
+					img(src="./img/social/tg.png", width="40" height="40" alt="tg")
 		
 		block content
-			//=======  right fixed social =========
-			.social-block-fixed
-				.social-block
-					a(href="#!").icon-email
-						img(src="./img/social/email.webp", alt="email")
-					a(href="#!").icon-vk
-						img(src="./img/social/vk.webp", alt="vk")
-					a(href="#!").icon-inst
-						img(src="./img/social/ins.webp", alt="inst")
-					a(href="#!").icon-tel
-						img(src="./img/social/app.webp", alt="app")
-					a(href="#!").icon-viber
-						img(src="./img/social/viber.webp", alt="viber")
-					a(href="#!").icon-tg
-						img(src="./img/social/tg.webp", alt="tg")
+
 		
 		a(href="#top").back-top.d-flex-center
 			svg.caret-right
