--- a/src/pug/sections/_contacts-inner.pug
+++ b/src/pug/sections/_contacts-inner.pug
@@ -3,7 +3,7 @@ section.contacts#contacts
 	.container
 		.contacts-content
 			.contacts-column
-				h2.title-25.mb-40 Ответим на ваши вопросы
+				h2 Ответим на ваши вопросы
 				
 				//========= MANAGER CARD =================
 				.manager-card.d-flex
@@ -20,15 +20,15 @@ section.contacts#contacts
 						.social-block
 							
 							a(href="#!").icon-tel
-								img(src="./img/social/app.webp", alt="app")
+								img(src="./img/social/app.png", width="40" height="40" alt="app")
 							a(href="#!").icon-viber
-								img(src="./img/social/viber.webp", alt="viber")
+								img(src="./img/social/viber.png", width="40" height="40" alt="viber")
 							a(href="#!").icon-tg
-								img(src="./img/social/tg.webp", alt="tg")
+								img(src="./img/social/tg.png", width="40" height="40" alt="tg")
 							a(href="#!").icon-vk
-								img(src="./img/social/vk.webp", alt="vk")
+								img(src="./img/social/vk.png", width="40" height="40" alt="vk")
 							a(href="#!").icon-inst
-								img(src="./img/social/ins.webp", alt="inst")
+								img(src="./img/social/ins.png", width="40" height="40" alt="inst")
 			
 
 				
@@ -46,18 +46,18 @@ section.contacts#contacts
 						//=====social =======
 						.social-block
 							a(href="#!").icon-tel
-								img(src="./img/social/app.webp", alt="app")
+								img(src="./img/social/app.png", width="40" height="40" alt="app")
 							a(href="#!").icon-viber
-								img(src="./img/social/viber.webp", alt="viber")
+								img(src="./img/social/viber.png", width="40" height="40" alt="viber")
 							a(href="#!").icon-tg
-								img(src="./img/social/tg.webp", alt="tg")
+								img(src="./img/social/tg.png", width="40" height="40" alt="tg")
 							a(href="#!").icon-vk
-								img(src="./img/social/vk.webp", alt="vk")
+								img(src="./img/social/vk.png", width="40" height="40" alt="vk")
 							a(href="#!").icon-inst
-								img(src="./img/social/ins.webp", alt="inst")
+								img(src="./img/social/ins.png", width="40" height="40" alt="inst")
 
 			.contacts-form-wrapper
-				h2.title-25.mb-40 Оформим ваш заказ
+				h2 Оформим ваш заказ
 				
 				form.order-form
 					.form-item
