--- a/src/pug/sections/_contacts.pug
+++ b/src/pug/sections/_contacts.pug
@@ -17,15 +17,15 @@ section.contacts#contacts
 						//=====social =======
 						.social-block
 							a(href="#!").icon-tel
-								img(src="./img/social/app.webp", alt="app")
+								img(src="./img/social/app.png", width="40" height="40" alt="app")
 							a(href="#!").icon-viber
-								img(src="./img/social/viber.webp", alt="viber")
+								img(src="./img/social/viber.png", width="40" height="40" alt="viber")
 							a(href="#!").icon-tg
-								img(src="./img/social/tg.webp", alt="tg")
+								img(src="./img/social/tg.png", width="40" height="40" alt="tg")
 							a(href="#!").icon-vk
-								img(src="./img/social/vk.webp", alt="vk")
+								img(src="./img/social/vk.png", width="40" height="40" alt="vk")
 							a(href="#!").icon-inst
-								img(src="./img/social/ins.webp", alt="inst")
+								img(src="./img/social/ins.png", width="40" height="40" alt="inst")
 							
 			
 						//===== кругляшок горит зеленым, если есть класс active  у родителя .online-state
@@ -47,6 +47,7 @@ section.contacts#contacts
 						label.form-label( for="file") 
 							span Добавить ваш логотип
 							span.icon-download
+								img(src="./img/doc.png", width="12" height="14" alt="icon")
 						span
 					.form-item
 						textarea( name="message" placeholder="Ваш комментарий...")
