--- a/src/scss/blocks/_pagination.scss
+++ b/src/scss/blocks/_pagination.scss
@@ -5,8 +5,8 @@
    width: fit-content;
    margin: 0 auto;
    column-gap: 25px;
-   font-family: var(--font);
-   font-weight: 700;
+  
+   font-weight: bold;
    margin-top: 44px;
    @media (max-width: 767px) {
 		margin-top: 30px;
