--- a/src/scss/pages/_single-blog.scss
+++ b/src/scss/pages/_single-blog.scss
@@ -42,8 +42,6 @@
 	padding-block: 45px;
 	h2{
 		font-size: 25px;
-		font-family: var(--font);
-		
 	}
 	&>*:not(:last-child) {
 		margin-bottom: 43px;
@@ -66,7 +64,7 @@
 	.mb-18{margin-bottom: 18px;}
 	.swiper{
 		padding-bottom: 27px;
-		.swiper-pagination{bottom: 0; font-weight: 700; 
+		.swiper-pagination{bottom: 0; font-weight: bold; 
 			@media (max-width: 767px) {
 			padding-left: 10px;
 			}
