--- a/src/pug/sections/_contacts-inner.pug
+++ b/src/pug/sections/_contacts-inner.pug
@@ -71,6 +71,7 @@ section.contacts#contacts
 						label.form-label( for="file") 
 							span Добавить ваш логотип
 							span.icon-download
+								img(src="./img/doc.png", width="12" height="14" alt="icon")
 						span
 					.form-item
 						textarea( name="message" placeholder="Ваш комментарий...")
