--- a/src/scss/base/_forms.scss
+++ b/src/scss/base/_forms.scss
@@ -28,9 +28,10 @@
 			border-bottom: 1px solid red;
 		}
 		&::placeholder{
-			font-family: inherit;
+			font-family: var(--font);
+			font-weight: 500;
 			color: inherit;
-			font-size: inherit;
+			font-size: 15px;
 		}
 		
 	}
