--- a/src/scss/pages/_contacts.scss
+++ b/src/scss/pages/_contacts.scss
@@ -1,5 +1,8 @@
 .inner-page.inner-page--contacts{
 	@media(min-width:1200px){padding-top: 40px; h1{margin-bottom: 44px;}}
+	@media (max-width: 1023px) {
+	padding-bottom: 0;
+	}
 }
 .contacts-main .container{
 	width: min(1120px, 100%);
