--- a/src/pug/pages/product-page.pug
+++ b/src/pug/pages/product-page.pug
@@ -29,7 +29,7 @@ block content
 					button.play-icon
 						svg.svg-play
 							use(href="./img/spriteSvg.svg#svg-play")
-					.video-poster
+					.video-poster.img-zoom
 						img.lazy(src="./img/product-page/product-poster.webp", alt="poster")
 					
 				
