--- a/src/pug/sections/_video-preview.pug
+++ b/src/pug/sections/_video-preview.pug
@@ -8,7 +8,7 @@ section.video-preview
 			button.play-icon
 				svg.svg-play
 					use(href="./img/spriteSvg.svg#svg-play")
-			.video-poster
+			.video-poster.img-zoom
 				img.lazy(src="./img/video-posters/poster1.webp", alt="poster")
 			
 		//===== video item =====
@@ -17,5 +17,5 @@ section.video-preview
 			button.play-icon
 				svg.svg-play
 					use(href="./img/spriteSvg.svg#svg-play")
-			.video-poster
+			.video-poster.img-zoom
 				img.lazy(src="./img/video-posters/poster2.webp", alt="poster")
