--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -279,8 +279,9 @@ h1, h2{
   padding-top: 90px;
   padding-bottom: 50px;
   @media (max-width: 767px) {
-    padding-top: 25px;
-    padding-bottom: 25px;
+    padding-top: 24px;
+    padding-bottom: 24px;
+    padding-left: 10px;
   }
 }
 .img-zoom{
