--- a/src/scss/base/_buttons.scss
+++ b/src/scss/base/_buttons.scss
@@ -78,7 +78,7 @@
 .btn.btn--outline{
 	background-color: transparent;
 	&:hover{
-		opacity: .5;
-		color: #000000;
+		color: white;
+		background-color: #000;
 	}
 }
