--- a/src/scss/base/_social.scss
+++ b/src/scss/base/_social.scss
@@ -6,12 +6,13 @@
 		width: 40px;
 		height: 40px;
 		border-radius: 50%;
-		
+		opacity: .7;
+		transition: .3s; 
 		display: flex;
 		justify-content: center;
 		align-items: center;
 		flex-shrink: 0;
-		
+		&:hover{opacity: 1;}
 	}
 	
 }
