--- a/src/scss/sections/_blog-cards.scss
+++ b/src/scss/sections/_blog-cards.scss
@@ -30,8 +30,8 @@
 	.title-25{transition: .3s; }
 	a:hover{
 		color: white;
-		background-color: var(--hoverColor);
-		border-color: var(--hoverColor);
+		background-color: #000;
+		
 	}
 	a.btn-arrow:hover, a.title-25:hover{
 		background-color: transparent;
@@ -57,7 +57,11 @@
 	@media (max-width: 767px) {
 		&:last-child{margin-right: 10px;}
 		max-width: 330px;
-		.title-25{font-size: 15px;}
+		.title-25{
+			font-size: 15px;
+			min-height: 34px;
+			margin-bottom: 16px;
+		}
 		&__body{padding: 16px;}
 		
 	}
@@ -95,7 +99,8 @@
 			overflow: hidden;
 			@media (max-width: 1023px) {
 				-webkit-line-clamp: 3;
-				height: 54px;
+				height: 55px;
+				line-height: 1.3;
 			}
 		}
 
